update MAVEN_OPTS so that it doesn't override previous setting.
git-svn-id: https://svn.java.net/svn/glassfish~svn/trunk/main@50977 6f3ba3e3-413c-0410-a8aa-90bee3ab43b5